SubBt/force-app/main/default/objects/Dynamic_Upload_File__mdt/Dynamic_Upload_File__mdt.object-meta.xml
<CustomObject>
    <label>Dynamic Upload File</label>
    <pluralLabel>Dynamic Upload File s</pluralLabel>
</CustomObject>