SubBt/force-app/main/default/objects/Dynamic_Upload_File__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client Id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>