SubBt/force-app/main/default/objects/Dynamic_Upload_File__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <type>TextArea</type>
</CustomField>