SubBt/force-app/main/default/objects/Dynamic_Upload_File__mdt/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <label>User Name</label>
    <type>TextArea</type>
</CustomField>